--- a/.config/ulauncher/settings.json
+++ b/.config/ulauncher/settings.json
@@ -4,7 +4,7 @@
     "disable-desktop-filters": false,
     "grab-mouse-pointer": false,
     "hotkey-show-app": "<Primary>F10",
-    "render-on-screen": "mouse-pointer-monitor",
+    "render-on-screen": "default-monitor",
     "show-indicator-icon": true,
     "show-recent-apps": "3",
     "terminal-command": "",
